// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests Tipseen content tests renders correctly 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <span
    aria-level="3"
    className="monday-style-tipseen-title"
    role="heading"
  >
    title
  </span>
  <span
    className="monday-style-tipseen-content_content"
  >
    content
  </span>
  <div
    className="monday-style-tipseen-content_buttons"
  >
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_dismiss monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Dismiss
    </button>
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_submit monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen content tests renders correctly when override dismiss button text 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <span
    className="monday-style-tipseen-content_content"
  >
    content
  </span>
  <div
    className="monday-style-tipseen-content_buttons"
  >
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_submit monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen content tests renders correctly when override submit button text 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <span
    className="monday-style-tipseen-content_content"
  >
    content
  </span>
  <div
    className="monday-style-tipseen-content_buttons"
  >
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_submit monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      submit button text
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen content tests renders correctly with empty props 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <div
    className="monday-style-tipseen-content_buttons"
  >
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_submit monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen content tests renders correctly without dismiss button 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <span
    className="monday-style-tipseen-content_content"
  >
    content
  </span>
  <div
    className="monday-style-tipseen-content_buttons"
  >
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_submit monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen content tests renders correctly without submit button 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <span
    className="monday-style-tipseen-content_content"
  >
    content
  </span>
  <div
    className="monday-style-tipseen-content_buttons"
  />
</div>
`;

exports[`Snapshot Tests Tipseen content tests renders correctly without title 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-content"
>
  <span
    className="monday-style-tipseen-content_content"
  >
    content
  </span>
  <div
    className="monday-style-tipseen-content_buttons"
  >
    <button
      aria-disabled={false}
      className="monday-style-tipseen-content_submit monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
      data-testid="button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen image tests renders correctly 1`] = `
<img
  alt="alternative text"
  className="monday-style-tipseen-image mock-class-name"
  src="fake-tipseen-src"
/>
`;

exports[`Snapshot Tests Tipseen image tests renders correctly with empty props 1`] = `
<img
  className="monday-style-tipseen-image"
/>
`;

exports[`Snapshot Tests Tipseen renders correctly renders correctly 1`] = `
<div
  id=""
>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onScroll={[Function]}
  />
  <span
    className="monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="monday-style-dialog-content-component bottom edge-center has-tooltip"
    >
      <div
        className="monday-style-tooltip monday-style-tooltip-primary padding-size-undefined monday-style-tipseen-wrapper monday-style-tipseen-wrapper--without-custom-width"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="monday-style-tipseen"
        >
          <div
            className="monday-style-tipseen_header"
          >
            <button
              aria-disabled={false}
              aria-label="Close"
              className="monday-style-tipseen_close-button monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
              data-testid="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon_component icon_component--no-focus-style"
                fill="currentColor"
                height="20"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clipRule="evenodd"
                  d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            className="monday-style-tipseen_content"
          />
        </div>
      </div>
      <div
        className="monday-style-tooltip-arrow monday-style-arrow monday-style-arrow-primary padding-size-undefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>
</div>
`;

exports[`Snapshot Tests Tipseen renders correctly renders correctly with custom width 1`] = `
<div
  id=""
>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
  <span
    className="monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="monday-style-dialog-content-component bottom edge-center has-tooltip"
    >
      <div
        className="monday-style-tooltip monday-style-tooltip-primary padding-size-undefined monday-style-tipseen-wrapper"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "width": 100,
          }
        }
      >
        <div
          className="monday-style-tipseen"
        >
          <div
            className="monday-style-tipseen_header"
          >
            <button
              aria-disabled={false}
              aria-label="Close"
              className="monday-style-tipseen_close-button monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
              data-testid="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon_component icon_component--no-focus-style"
                fill="currentColor"
                height="20"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clipRule="evenodd"
                  d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
          </div>
          <div
            className="monday-style-tipseen_content"
          />
        </div>
      </div>
      <div
        className="monday-style-tooltip-arrow monday-style-arrow monday-style-arrow-primary padding-size-undefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>
</div>
`;

exports[`Snapshot Tests Tipseen renders correctly renders correctly with title 1`] = `
<div
  id=""
>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
  <span
    className="monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="monday-style-dialog-content-component bottom edge-center has-tooltip"
    >
      <div
        className="monday-style-tooltip monday-style-tooltip-primary padding-size-undefined monday-style-tipseen-wrapper monday-style-tipseen-wrapper--without-custom-width"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="monday-style-tipseen"
        >
          <div
            className="monday-style-tipseen_header"
          >
            <button
              aria-disabled={false}
              aria-label="Close"
              className="monday-style-tipseen_close-button monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
              data-testid="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="icon_component icon_component--no-focus-style"
                fill="currentColor"
                height="20"
                onClick={[Function]}
                viewBox="0 0 20 20"
                width="20"
              >
                <path
                  clipRule="evenodd"
                  d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </button>
            <span
              aria-level="3"
              className="monday-style-tipseen-title monday-style-tipseen_title"
              role="heading"
            >
              mock title
            </span>
          </div>
          <div
            className="monday-style-tipseen_content"
          />
        </div>
      </div>
      <div
        className="monday-style-tooltip-arrow monday-style-arrow monday-style-arrow-primary padding-size-undefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>
</div>
`;

exports[`Snapshot Tests Tipseen renders correctly renders correctly without close button 1`] = `
<div
  id=""
>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
  <span
    className="monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="monday-style-dialog-content-component bottom edge-center has-tooltip"
    >
      <div
        className="monday-style-tooltip monday-style-tooltip-primary padding-size-undefined monday-style-tipseen-wrapper monday-style-tipseen-wrapper--without-custom-width"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="monday-style-tipseen"
        >
          <div
            className="monday-style-tipseen_header"
          />
          <div
            className="monday-style-tipseen_content"
          />
        </div>
      </div>
      <div
        className="monday-style-tooltip-arrow monday-style-arrow monday-style-arrow-primary padding-size-undefined"
        data-placement="bottom"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>
</div>
`;

exports[`Snapshot Tests Tipseen wizard tests renders correctly 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-wizard mock-class-name"
>
  <span
    aria-level="3"
    className="monday-style-tipseen-title"
    role="heading"
  >
    title
  </span>
  <div
    className="monday-style-steps monday-style-tipseen-wizard_wizard monday-style-steps--on-primary monday-style-steps--content-on-top"
    id=""
  >
    <div>
      Popover message will appear here loremipsum dolor samet…
    </div>
    <div
      className="monday-style-steps-header monday-style-steps-header--gallery"
    >
      <button
        aria-disabled={true}
        className="monday-style-steps-command monday-style-steps-command--backward monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
        data-testid="steps-backward-command"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        Back
      </button>
      <div
        className="monday-style-steps-header_gallery"
        role="group"
      >
        <button
          aria-current="step"
          aria-label="Step number 0"
          className="monday-style-steps-header_dot monday-style-steps-header_dot--is-active"
          onClick={[Function]}
          type="button"
        />
        <button
          aria-current={false}
          aria-label="Step number 1"
          className="monday-style-steps-header_dot"
          onClick={[Function]}
          type="button"
        />
        <button
          aria-current={false}
          aria-label="Step number 2"
          className="monday-style-steps-header_dot"
          onClick={[Function]}
          type="button"
        />
      </div>
      <button
        aria-disabled={false}
        className="monday-style-steps-command monday-style-steps-command--forward monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
        data-testid="steps-forward-command"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen wizard tests renders correctly with empty props 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-wizard"
>
  <div
    className="monday-style-steps monday-style-tipseen-wizard_wizard monday-style-steps--on-primary monday-style-steps--content-on-top"
    id=""
  >
    <div
      className="monday-style-steps-header monday-style-steps-header--gallery"
    >
      <button
        aria-disabled={true}
        className="monday-style-steps-command monday-style-steps-command--backward monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
        data-testid="steps-backward-command"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        Back
      </button>
      <div
        className="monday-style-steps-header_gallery"
        role="group"
      />
      <button
        aria-disabled={false}
        className="monday-style-steps-command monday-style-steps-command--forward monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
        data-testid="steps-forward-command"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests Tipseen wizard tests renders correctly without title 1`] = `
<div
  className="monday-style-tipseen-basic-content monday-style-tipseen-wizard"
>
  <div
    className="monday-style-steps monday-style-tipseen-wizard_wizard monday-style-steps--on-primary monday-style-steps--content-on-top"
    id=""
  >
    <div>
      Popover message will appear here loremipsum dolor samet…
    </div>
    <div
      className="monday-style-steps-header monday-style-steps-header--gallery"
    >
      <button
        aria-disabled={true}
        className="monday-style-steps-command monday-style-steps-command--backward monday-style-button monday-style-button--size-small monday-style-button--kind-tertiary monday-style-button--color-on-primary-color"
        data-testid="steps-backward-command"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        Back
      </button>
      <div
        className="monday-style-steps-header_gallery"
        role="group"
      >
        <button
          aria-current="step"
          aria-label="Step number 0"
          className="monday-style-steps-header_dot monday-style-steps-header_dot--is-active"
          onClick={[Function]}
          type="button"
        />
        <button
          aria-current={false}
          aria-label="Step number 1"
          className="monday-style-steps-header_dot"
          onClick={[Function]}
          type="button"
        />
        <button
          aria-current={false}
          aria-label="Step number 2"
          className="monday-style-steps-header_dot"
          onClick={[Function]}
          type="button"
        />
      </div>
      <button
        aria-disabled={false}
        className="monday-style-steps-command monday-style-steps-command--forward monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-on-primary-color"
        data-testid="steps-forward-command"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
